SUBDIRS= .
EXTRA_DIST= \
	    test01TraceCont.lhs \
	    test02TraceContSignal.lhs \
	    test03TraceKill.lhs \
	    test04TraceSingleStep.lhs \
	    test05TraceSingleStepSignal.lhs \
	    test06TraceSystemCall.lhs \
	    test07TraceSystemCallSignal.lhs \
	    test08TraceSystemCallEntry.lhs \
	    test09TraceSystemCallEntrySignal.lhs \
	    test10TraceSystemCallExit.lhs \
	    test11TraceSystemCallExitSignal.lhs \
	    test12SystemCallGetNumber.lhs

